@@ -1,3 +1,9 @@
+2001-12-05  Alex Larsson  <alexl@redhat.com>
+
+	* launcher.c (create_launcher):
+	Don't only load from file: uri's. This makes it at least do something
+	for program: uris.
+
 2001-12-05  Glynn Foster  <glynn.foster@sun.com>
 
 	* basep-widget.c: Fix segfault George.
